# OpenGL-CMake-Template

./: CMakeLists.txt
dependencies/glad/: glad.c
dependencies/glad/include/glad/: glad.h
src/: main.cpp
